[package]
name = "tokio_print"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
safety_breaker = "0.1"

[dependencies.tokio]
version = "*"
default-features = true
features = ["full"]