[package]
name = "tokio_print"
version = "0.1.0"
edition = "2018"
authors = ["WinLinux1028 <WinLinux1028@github.com>"]
description = "tokio async version of println!, eprintln!, print! and eprint!"
repository = "https://github.com/WinLinux1028/tokio_print"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
safety_breaker = "0.1"

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]